fixed small bug with stretching sidebar menu

--- a/EPPMS/Styles collection/style.css
+++ b/EPPMS/Styles collection/style.css
@@ -86,6 +86,7 @@ main {
 .sidebar { 
     background: #FFFFFF;
     min-width: 15rem;
+    width: 15rem;
     display: flex;
     flex-direction: column;
     transition: 0.5s;
